Bug fix: Default width of Clippings Manager tree list is too narrow
(issue #373)

--- a/wx-src/pages/clippingsMgr.css
+++ b/wx-src/pages/clippingsMgr.css
@@ -481,7 +481,7 @@ select {
 
 #clippings-tree {
     order: 1;
-    flex: 0 1 auto;
+    flex: none;
     align-self: stretch;
     width: 228px;
     min-width: 128px;
